Skapad med Colaboratory

--- a/Lab1/ivan-private_lab1.ipynb
+++ b/Lab1/ivan-private_lab1.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "template-report-lab-X.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -463,8 +462,7 @@
         "# Print sparse matrix object attributes\n",
         "print('Sparse matrix values: \\n',spA.val)\n",
         "print('Sparse matrix column indices: \\n',spA.col_idx)\n",
-        "print('Sparse matrix row pointer: \\n',spA.row_ptr)\n",
-        ""
+        "print('Sparse matrix row pointer: \\n',spA.row_ptr)\n"
       ],
       "execution_count": null,
       "outputs": [
