--- a/Lab1/Widen00_lab1.ipynb
+++ b/Lab1/Widen00_lab1.ipynb
@@ -78,52 +78,7 @@
         "id": "HmB2noTr1Oyo"
       },
       "source": [
-        "A short statement on who is the author of the file, and if the code is distributed under a certain license."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Pdll1Xc9WP0e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 37
-        },
-        "outputId": "9e782dc7-4ad0-48f9-d45c-2200e83dec4d"
-      },
-      "source": [
-        "\"\"\"This program is a template for lab reports in the course\"\"\"\n",
-        "\"\"\"DD2363 Methods in Scientific Computing, \"\"\"\n",
-        "\"\"\"KTH Royal Institute of Technology, Stockholm, Sweden.\"\"\"\n",
-        "\n",
-        "# Copyright (C) 2020 Johan Hoffman (jhoffman@kth.se)\n",
-        "\n",
-        "# This file is part of the course DD2365 Advanced Computation in Fluid Mechanics\n",
-        "# KTH Royal Institute of Technology, Stockholm, Sweden\n",
-        "#\n",
-        "# This is free software: you can redistribute it and/or modify\n",
-        "# it under the terms of the GNU Lesser General Public License as published by\n",
-        "# the Free Software Foundation, either version 3 of the License, or\n",
-        "# (at your option) any later version.\n",
-        "\n",
-        "# This template is maintained by Johan Hoffman\n",
-        "# Please report problems to jhoffman@kth.se"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'KTH Royal Institute of Technology, Stockholm, Sweden.'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
+        "This program is a raport for a lab about matrix factorization in the course DD2363 Methods in Scientific Computing. The author of this file is Joel Widén, joelwid@kth.se."
       ]
     },
     {
@@ -172,7 +127,7 @@
         "from matplotlib import axes\n",
         "from mpl_toolkits.mplot3d import Axes3D"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -239,6 +194,94 @@
       },
       "source": [
         "Describe the methods you used to solve the problem. This may be a combination of text, mathematical formulas (Latex), algorithms (code), data and output.  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run this block to generate matrices and vectors for the functions\n",
+        "#x = np.array([1, 3, 6, 1, 0, 4]).transpose()\n",
+        "x = np.array([[1], [1], [1], [1], [1], [1]])\n",
+        "# From example 5.5\n",
+        "A_sparse = np.array([[3, 2, 0, 2, 0, 0], [0, 2, 1, 0, 0, 0], [0, 0, 1, 0, 0, 0], [0, 0, 3, 2, 0, 0], [0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 2, 3]])\n",
+        "crs_val = np.array([3, 2, 2, 2, 1, 1, 3, 2, 1, 2, 3])\n",
+        "col_idx = np.array([1, 2, 4, 2, 3, 3, 3, 4, 5, 5, 6])\n",
+        "row_ptr = np.array([1, 4, 6, 7, 9, 10, 12])\n",
+        "\n",
+        "print(x)\n",
+        "print(A_sparse)\n",
+        "print(len(A_sparse))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4jU_qr-A5uvT",
+        "outputId": "d79998c9-01e3-4156-e5b1-2eed6a888601"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1]\n",
+            " [1]\n",
+            " [1]\n",
+            " [1]\n",
+            " [1]\n",
+            " [1]]\n",
+            "[[3 2 0 2 0 0]\n",
+            " [0 2 1 0 0 0]\n",
+            " [0 0 1 0 0 0]\n",
+            " [0 0 3 2 0 0]\n",
+            " [0 0 0 0 1 0]\n",
+            " [0 0 0 0 2 3]]\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sparse matrix vector product based on Algorithm 5.9\n",
+        "def sparse_matrix_vector_product(A_sparse, crs_val, col_idx, row_ptr, x):\n",
+        "  n = len(A_sparse)\n",
+        "  b = np.zeros(n)\n",
+        "  for i in range(0, n-1):\n",
+        "    for j in range(row_ptr[i], row_ptr[i+1]-1):\n",
+        "      b[i] = b[i] + crs_val[j]*x[col_idx[j]]\n",
+        "  return b\n",
+        "\n",
+        "b = sparse_matrix_vector_product(A_sparse, crs_val, col_idx, row_ptr, x)\n",
+        "print(b)\n",
+        "\n",
+        "b_normal = A_sparse.dot(x)\n",
+        "print(b_normal)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uKcx6ZE94cOp",
+        "outputId": "c9dfa32a-69c8-4425-d447-2462c2a91009"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4. 1. 0. 2. 0. 0.]\n",
+            "[[7]\n",
+            " [3]\n",
+            " [1]\n",
+            " [5]\n",
+            " [1]\n",
+            " [5]]\n"
+          ]
+        }
       ]
     },
     {
