--- a/Lab1/triggerdude33_lab1.ipynb
+++ b/Lab1/triggerdude33_lab1.ipynb
@@ -182,7 +182,7 @@
         "\n",
         "$A = QR$\n",
         "\n",
-        "We will use the modified gram-schmidt iteration mentioned on page 89 of the book. This is instead of the regular gram-schmidt, since the regular one is prone to rounding errors when implemented on a computer.\n",
+        "The modified gram-schmidt iteration is mentioned on page 89 of the book. The regular iteration is prone to rounding errors when implemented on a computer, we therefore use the modified iteration.\n",
         "\n",
         "Additionally, this lab will implement sparse matrix-vector multiplication. The matrix will be on Compressed Row Format (CRS). Compressing sparse matricies is benefitial for the computational cost. Regular matrix-vector multiplication results in $O(n^2)$ complexity, whereas with sparse methods you get $O(n)$.\n"
       ]
