--- a/Lab1/triggerdude33_lab1.ipynb
+++ b/Lab1/triggerdude33_lab1.ipynb
@@ -178,11 +178,11 @@
         "\n",
         "$x = A^{-1}b$\n",
         "\n",
-        "However, for most matricies, inverting them is not a simple task. To make inversion easier, we first have to factor $A$ into matricies that are easy to invert. For this lab, we will use [modified gram-schmidt](https://en.wikipedia.org/wiki/Gram%E2%80%93Schmidt_process) $QR$ factorization.\n",
+        "However, for most matricies, inverting them is not a simple task. To make inversion easier, we first have to factor $A$ into matricies that are easy to invert. For this lab, we will use [gram-schmidt](https://en.wikipedia.org/wiki/Gram%E2%80%93Schmidt_process) $QR$ factorization.\n",
         "\n",
         "$A = QR$\n",
         "\n",
-        "The modified gram-schmidt iteration is mentioned on page 89 of the book. The regular iteration is prone to rounding errors when implemented on a computer, we therefore use the modified iteration.\n",
+        "We will use the modified gram-schmidt iteration which is mentioned on page 89 of the book. The modified iteration is used because the regular one is prone to rounding errors when implemented on a computer.\n",
         "\n",
         "Additionally, this lab will implement sparse matrix-vector multiplication. The matrix will be on Compressed Row Format (CRS). Compressing sparse matricies is benefitial for the computational cost. Regular matrix-vector multiplication results in $O(n^2)$ complexity, whereas with sparse methods you get $O(n)$.\n"
       ]
