--- a/Lab1/Widen00_lab1.ipynb
+++ b/Lab1/Widen00_lab1.ipynb
@@ -127,7 +127,7 @@
         "from matplotlib import axes\n",
         "from mpl_toolkits.mplot3d import Axes3D"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -200,24 +200,34 @@
       "cell_type": "code",
       "source": [
         "# Run this block to generate matrices and vectors for the functions\n",
-        "#x = np.array([1, 3, 6, 1, 0, 4]).transpose()\n",
-        "x = np.array([[1], [1], [1], [1], [1], [1]])\n",
+        "x = np.array([1, 1, 1, 1, 1, 1])\n",
         "# From example 5.5\n",
-        "A_sparse = np.array([[3, 2, 0, 2, 0, 0], [0, 2, 1, 0, 0, 0], [0, 0, 1, 0, 0, 0], [0, 0, 3, 2, 0, 0], [0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 2, 3]])\n",
-        "crs_val = np.array([3, 2, 2, 2, 1, 1, 3, 2, 1, 2, 3])\n",
+        "# Construct a simple sparse matrix class using the CRS data structure\n",
+        "class spMatrix:\n",
+        "  def __init__(self, val, col_idx, row_ptr):\n",
+        "    self.val = val\n",
+        "    self.col_idx = col_idx\n",
+        "    self.row_ptr = row_ptr\n",
+        "\n",
+        "# Create a sparse matrix object\n",
+        "val = np.array([3, 2, 2, 2, 1, 1, 3, 2, 1, 2, 3])\n",
         "col_idx = np.array([1, 2, 4, 2, 3, 3, 3, 4, 5, 5, 6])\n",
         "row_ptr = np.array([1, 4, 6, 7, 9, 10, 12])\n",
+        "spA = spMatrix(val, col_idx, row_ptr)\n",
         "\n",
-        "print(x)\n",
-        "print(A_sparse)\n",
-        "print(len(A_sparse))"
+        "# Creating dense matrix for comparison\n",
+        "A_sparse = np.array([[3, 2, 0, 2, 0, 0], [0, 2, 1, 0, 0, 0], [0, 0, 1, 0, 0, 0], [0, 0, 3, 2, 0, 0], [0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 2, 3]])\n",
+        "print(\"Testvector x=\",x)\n",
+        "\n",
+        "# Vector for QR factorization\n",
+        "A_inv = np.array([[2, -1], [-1, 2]])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4jU_qr-A5uvT",
-        "outputId": "d79998c9-01e3-4156-e5b1-2eed6a888601"
+        "outputId": "9c84d649-dae0-4ea4-d6ee-7245aa6f807f"
       },
       "execution_count": 6,
       "outputs": [
@@ -225,19 +235,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1]\n",
-            " [1]\n",
-            " [1]\n",
-            " [1]\n",
-            " [1]\n",
-            " [1]]\n",
-            "[[3 2 0 2 0 0]\n",
-            " [0 2 1 0 0 0]\n",
-            " [0 0 1 0 0 0]\n",
-            " [0 0 3 2 0 0]\n",
-            " [0 0 0 0 1 0]\n",
-            " [0 0 0 0 2 3]]\n",
-            "6\n"
+            "6\n",
+            "Testvector x= [1 1 1 1 1 1]\n"
           ]
         }
       ]
@@ -246,40 +245,91 @@
       "cell_type": "code",
       "source": [
         "#Sparse matrix vector product based on Algorithm 5.9\n",
-        "def sparse_matrix_vector_product(A_sparse, crs_val, col_idx, row_ptr, x):\n",
-        "  n = len(A_sparse)\n",
-        "  b = np.zeros(n)\n",
-        "  for i in range(0, n-1):\n",
-        "    for j in range(row_ptr[i], row_ptr[i+1]-1):\n",
-        "      b[i] = b[i] + crs_val[j]*x[col_idx[j]]\n",
+        "def sparse_matrix_vector_product(spA, x):\n",
+        "  n = max()\n",
+        "  b = np.zeros(n, dtype=\"int\")\n",
+        "  for i in range(0, n):\n",
+        "    for j in range(spA.row_ptr[i]-1, spA.row_ptr[i+1]-1):\n",
+        "      b[i] = b[i] + spA.val[j]*x[spA.col_idx[j]-1]\n",
         "  return b\n",
         "\n",
-        "b = sparse_matrix_vector_product(A_sparse, crs_val, col_idx, row_ptr, x)\n",
-        "print(b)\n",
+        "b = sparse_matrix_vector_product(spA, x)\n",
+        "b_dense = A_sparse.dot(x)\n",
         "\n",
-        "b_normal = A_sparse.dot(x)\n",
-        "print(b_normal)"
+        "if (b == b_dense).all():\n",
+        "  print(\"Question 1 verified with dense matrix\")\n",
+        "\n",
+        "print(\"Sparse matrix computated b =\", b)\n",
+        "print(\"Dense matrix computated b =\", b_dense)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKcx6ZE94cOp",
-        "outputId": "c9dfa32a-69c8-4425-d447-2462c2a91009"
+        "outputId": "c573117a-d7ac-448e-f03a-ddd968461d96"
       },
-      "execution_count": 7,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[4. 1. 0. 2. 0. 0.]\n",
-            "[[7]\n",
-            " [3]\n",
-            " [1]\n",
-            " [5]\n",
-            " [1]\n",
-            " [5]]\n"
+            "Question 1 verified with dense matrix\n",
+            "Sparse matrix computated b = [7 3 1 5 1 5]\n",
+            "Dense matrix computated b = [7 3 1 5 1 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#QR factorization. Want to use modified grahm-schmidt algorithm\n",
+        "\n",
+        "def modified_gram_schmidt_iteration(A):\n",
+        "  n = len(A)\n",
+        "  print(n)\n",
+        "  return(Q, R)\n",
+        "\n",
+        "Q, R = modified_gram_schmidt_iteration(A_inv)\n",
+        "\n",
+        "print(Q)\n",
+        "print(R)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "O4eM9zqIUB6W",
+        "outputId": "50b19983-da9f-4b8e-e4cd-58aa4a36e768",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 384
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'Q' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-d303971c743a>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodified_gram_schmidt_iteration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_inv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-d303971c743a>\u001b[0m in \u001b[0;36mmodified_gram_schmidt_iteration\u001b[0;34m(A)\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m   \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodified_gram_schmidt_iteration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_inv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Q' is not defined"
           ]
         }
       ]
