Assignments completed. TODO write report and clean file

--- a/Lab1/Widen00_lab1.ipynb
+++ b/Lab1/Widen00_lab1.ipynb
@@ -199,7 +199,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Run this block to generate matrices and vectors for the functions\n",
+        "#Sparse matrix\n",
+        "\n",
+        "#Sparse matrix vector product based on Algorithm 5.9\n",
+        "def sparse_matrix_vector_product(spA, x):\n",
+        "  n = max(spA.col_idx)\n",
+        "  b = np.zeros(n, dtype=\"int\")\n",
+        "  for i in range(0, n):\n",
+        "    for j in range(spA.row_ptr[i]-1, spA.row_ptr[i+1]-1):\n",
+        "      b[i] = b[i] + spA.val[j]*x[spA.col_idx[j]-1]\n",
+        "  return b\n",
+        "\n",
         "x = np.array([1, 1, 1, 1, 1, 1])\n",
         "# From example 5.5\n",
         "# Construct a simple sparse matrix class using the CRS data structure\n",
@@ -215,63 +225,27 @@
         "row_ptr = np.array([1, 4, 6, 7, 9, 10, 12])\n",
         "spA = spMatrix(val, col_idx, row_ptr)\n",
         "\n",
-        "# Creating dense matrix for comparison\n",
+        "# Creating matrix for comparison dense calculation\n",
         "A_sparse = np.array([[3, 2, 0, 2, 0, 0], [0, 2, 1, 0, 0, 0], [0, 0, 1, 0, 0, 0], [0, 0, 3, 2, 0, 0], [0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 2, 3]])\n",
-        "print(\"Testvector x=\",x)\n",
         "\n",
-        "# Vector for QR factorization\n",
-        "A_inv = np.array([[2, -1], [-1, 2]])\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4jU_qr-A5uvT",
-        "outputId": "9c84d649-dae0-4ea4-d6ee-7245aa6f807f"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6\n",
-            "Testvector x= [1 1 1 1 1 1]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Sparse matrix vector product based on Algorithm 5.9\n",
-        "def sparse_matrix_vector_product(spA, x):\n",
-        "  n = max()\n",
-        "  b = np.zeros(n, dtype=\"int\")\n",
-        "  for i in range(0, n):\n",
-        "    for j in range(spA.row_ptr[i]-1, spA.row_ptr[i+1]-1):\n",
-        "      b[i] = b[i] + spA.val[j]*x[spA.col_idx[j]-1]\n",
-        "  return b\n",
-        "\n",
+        "#Calling function\n",
         "b = sparse_matrix_vector_product(spA, x)\n",
         "b_dense = A_sparse.dot(x)\n",
         "\n",
+        "#Check and print answers\n",
         "if (b == b_dense).all():\n",
         "  print(\"Question 1 verified with dense matrix\")\n",
-        "\n",
         "print(\"Sparse matrix computated b =\", b)\n",
-        "print(\"Dense matrix computated b =\", b_dense)\n",
-        "\n",
-        "\n"
+        "print(\"Dense matrix computated b =\", b_dense)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKcx6ZE94cOp",
-        "outputId": "c573117a-d7ac-448e-f03a-ddd968461d96"
+        "outputId": "9fdaabb0-07e3-459a-9bb2-0e21a31313ce"
       },
-      "execution_count": 57,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,47 +263,103 @@
       "source": [
         "#QR factorization. Want to use modified grahm-schmidt algorithm\n",
         "\n",
+        "#Algorithm 5.3\n",
         "def modified_gram_schmidt_iteration(A):\n",
         "  n = len(A)\n",
-        "  print(n)\n",
+        "  R = np.zeros((n,n))\n",
+        "  Q = np.zeros((n,n))\n",
+        "  for j in range(0, n):\n",
+        "    v = A[:,j]\n",
+        "    for i in range(0, j):\n",
+        "      R[i][j] = Q[:,i].dot(v)\n",
+        "      v = v - R[i][j]*Q[:,i]\n",
+        "    R[j][j] = np.linalg.norm(v)\n",
+        "    Q[:,j] = v/R[j][j]\n",
         "  return(Q, R)\n",
         "\n",
+        "# Vector for QR factorization and direct solving\n",
+        "A_inv = np.array([[2, -1], [-1, 2]])\n",
+        "#Call function\n",
         "Q, R = modified_gram_schmidt_iteration(A_inv)\n",
+        "frob_1 = np.linalg.norm(Q.transpose().dot(Q) - np.identity(len(Q)), \"fro\")\n",
+        "frob_2 = np.linalg.norm(Q.dot(R) - A_inv, \"fro\")\n",
         "\n",
-        "print(Q)\n",
-        "print(R)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "# Print answers\n",
+        "print(\"Frobenius norm for Q^T*Q - I = \",frob_1)\n",
+        "print(\"Frobenius norm for Q*R - A = \",frob_2)\n",
+        "print(\"Q = \", Q)\n",
+        "print(\"R = \", R)"
       ],
       "metadata": {
-        "id": "O4eM9zqIUB6W",
-        "outputId": "50b19983-da9f-4b8e-e4cd-58aa4a36e768",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O4eM9zqIUB6W",
+        "outputId": "65077113-8054-4965-cf51-589460868450"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n"
+            "Frobenius norm for Q^T*Q - I =  2.6901577681355055e-16\n",
+            "Frobenius norm for Q*R - A =  0.0\n",
+            "Q =  [[ 0.89442719  0.4472136 ]\n",
+            " [-0.4472136   0.89442719]]\n",
+            "R =  [[ 2.23606798 -1.78885438]\n",
+            " [ 0.          1.34164079]]\n"
           ]
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Direct Solver. Previous block must be run before this one.\n",
+        "# Direct Solver will be using QR factorization for inverting A using Q and R\n",
+        "# from previous assignment. Q is orthogonal and its inverse is equal to Q^T.\n",
+        "# Using backward substitution to solve R*x = Q^T*b as Ax = b => QRx = b\n",
+        "\n",
+        "#Backwards substitution from algorithm 5.2\n",
+        "def backward_substitution(U,b):\n",
+        "  n = len(b)\n",
+        "  x = np.zeros(n)\n",
+        "  x[n-1] = b[n-1]/U[n-1,n-1]\n",
+        "  for i in range(n-2, -1, -1):\n",
+        "    sum = 0\n",
+        "    for j in range(i+1, n-2, -1):\n",
+        "      sum = sum + U[i][j]*x[j]\n",
+        "    x[i] = (b[i] - sum)/U[i][i]\n",
+        "  return x\n",
+        "\n",
+        "#Function\n",
+        "y = np.array([15, 3])\n",
+        "b = A_inv.dot(y)\n",
+        "QTb = Q.transpose().dot(b)\n",
+        "x = backward_substitution(R, QTb)\n",
+        "residual = np.linalg.norm(A_inv.dot(x)-b)\n",
+        "error = np.linalg.norm(x-y)\n",
+        "print(\"Solution x=\", x)\n",
+        "print(\"Residual: \", residual)\n",
+        "print(\"Error: \", error)"
+      ],
+      "metadata": {
+        "id": "WkEuhuXGNVRu",
+        "outputId": "1dadf637-d5da-42cd-c562-3aa89b077112",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'Q' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-d303971c743a>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodified_gram_schmidt_iteration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_inv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-4-d303971c743a>\u001b[0m in \u001b[0;36mmodified_gram_schmidt_iteration\u001b[0;34m(A)\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m   \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodified_gram_schmidt_iteration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_inv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'Q' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Solution x= [15.  3.]\n",
+            "Residual:  7.944109290391274e-15\n",
+            "Error:  6.661338147750939e-15\n"
           ]
         }
       ]
