fixed some spelling errors

--- a/Lab1/ivan-private_lab1.ipynb
+++ b/Lab1/ivan-private_lab1.ipynb
@@ -88,8 +88,8 @@
     },
     "outputId": "a790b00c-cbec-47f1-9059-e0be7f88ff5d",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.734510Z",
-     "start_time": "2024-01-28T18:57:35.709266Z"
+     "end_time": "2024-01-28T19:03:26.814052Z",
+     "start_time": "2024-01-28T19:03:26.780660Z"
     }
    },
    "source": [
@@ -110,13 +110,13 @@
     "# This template is maintained by Johan Hoffman\n",
     "# Please report problems to jhoffman@kth.se"
    ],
-   "execution_count": 229,
+   "execution_count": 249,
    "outputs": [
     {
      "data": {
       "text/plain": "'KTH Royal Institute of Technology, Stockholm, Sweden.'"
      },
-     "execution_count": 229,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,11 +149,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.743915Z",
-     "start_time": "2024-01-28T18:57:35.736696Z"
+     "end_time": "2024-01-28T19:03:26.847522Z",
+     "start_time": "2024-01-28T19:03:26.814749Z"
     }
    },
-   "execution_count": 230
+   "execution_count": 250
   },
   {
    "cell_type": "markdown",
@@ -249,11 +249,11 @@
    "metadata": {
     "id": "hwwxa7EqD7zu",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.747221Z",
-     "start_time": "2024-01-28T18:57:35.740361Z"
+     "end_time": "2024-01-28T19:03:26.853575Z",
+     "start_time": "2024-01-28T19:03:26.840753Z"
     }
    },
-   "execution_count": 231,
+   "execution_count": 251,
    "outputs": []
   },
   {
@@ -302,11 +302,11 @@
    "metadata": {
     "id": "0SyItsDBEP9q",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.748179Z",
-     "start_time": "2024-01-28T18:57:35.742926Z"
+     "end_time": "2024-01-28T19:03:26.873048Z",
+     "start_time": "2024-01-28T19:03:26.856793Z"
     }
    },
-   "execution_count": 232,
+   "execution_count": 252,
    "outputs": []
   },
   {
@@ -358,11 +358,11 @@
    "metadata": {
     "id": "v5oD-fx7EahR",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.749205Z",
-     "start_time": "2024-01-28T18:57:35.746529Z"
+     "end_time": "2024-01-28T19:03:26.876568Z",
+     "start_time": "2024-01-28T19:03:26.860205Z"
     }
    },
-   "execution_count": 233,
+   "execution_count": 253,
    "outputs": []
   },
   {
@@ -402,11 +402,11 @@
    "metadata": {
     "id": "NTGUHn1OEd2N",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.757898Z",
-     "start_time": "2024-01-28T18:57:35.750757Z"
+     "end_time": "2024-01-28T19:03:26.876781Z",
+     "start_time": "2024-01-28T19:03:26.862819Z"
     }
    },
-   "execution_count": 234,
+   "execution_count": 254,
    "outputs": []
   },
   {
@@ -477,28 +477,28 @@
     "id": "rjOaGUtrFb01",
     "outputId": "8a8dccee-bd75-4524-a7f2-0891bd599c3a",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.780601Z",
-     "start_time": "2024-01-28T18:57:35.752594Z"
+     "end_time": "2024-01-28T19:03:26.882321Z",
+     "start_time": "2024-01-28T19:03:26.877055Z"
     }
    },
-   "execution_count": 235,
+   "execution_count": 255,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Randomly generated A:\n",
-      "[[6 5 3 9 5 3]\n",
-      " [4 2 0 6 5 1]\n",
-      " [2 4 9 5 2 5]\n",
-      " [5 3 3 3 4 8]\n",
-      " [0 6 1 7 9 3]\n",
-      " [7 7 4 0 1 4]]\n",
-      "Randomly generated x: [1 3 4 1 0 9]\n",
+      "[[8 8 6 8 7 4]\n",
+      " [5 4 6 6 3 2]\n",
+      " [2 5 9 3 7 9]\n",
+      " [6 1 5 8 1 2]\n",
+      " [6 4 5 0 1 2]\n",
+      " [2 1 5 1 1 9]]\n",
+      "Randomly generated x: [6 5 4 6 7 4]\n",
       "\n",
       "Results:\n",
-      "A * x: [ 69  25 100 101  56  80]\n",
-      "sparse_A * x: [ 69.  25. 100. 101.  56.  80.]\n",
+      "A * x: [225 139 176 124  91  86]\n",
+      "sparse_A * x: [225. 139. 176. 124.  91.  86.]\n",
       "norm of difference: 0.0\n"
      ]
     }
@@ -516,7 +516,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The result of the QR factorization will be measured by checking if the implementation produces a correct factorization of $A = QR$. To test this ...\n",
+    "The result of the QR factorization will be measured by checking if the implementation produces a correct factorization of $A = QR$. This will be tested in the three following ways:\n",
     "\n",
     "1. Firstly we will check if R is an upper triangular matrix by comparing it with the output of np.triu(R) which gives back R as an upper triangular matrix, so it should be equal to R. \n",
     "2. The Frobenius norm $||Q^T Q - I||_F$, which if Q is an orthonormal matrix should be equal to 0 (or close to 0 because of float finite precision).\n",
@@ -562,11 +562,11 @@
     "id": "c5tJw4L-FlHt",
     "outputId": "307bbe9a-e65d-4bbd-d173-a48f0da5d75a",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.787651Z",
-     "start_time": "2024-01-28T18:57:35.757745Z"
+     "end_time": "2024-01-28T19:03:26.883907Z",
+     "start_time": "2024-01-28T19:03:26.880949Z"
     }
    },
-   "execution_count": 236,
+   "execution_count": 256,
    "outputs": [
     {
      "name": "stdout",
@@ -654,11 +654,11 @@
     "id": "XiHPmKRBFn3E",
     "outputId": "6bd67d10-1e36-44b6-ca85-1a169a0b774e",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.788269Z",
-     "start_time": "2024-01-28T18:57:35.761159Z"
+     "end_time": "2024-01-28T19:03:26.908391Z",
+     "start_time": "2024-01-28T19:03:26.885354Z"
     }
    },
-   "execution_count": 237,
+   "execution_count": 257,
    "outputs": [
     {
      "name": "stdout",
@@ -746,11 +746,11 @@
     "id": "-YSI6LQ_Fqic",
     "outputId": "12c07ee3-74e3-4c72-a881-7d48fe9d23e8",
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:57:35.820189Z",
-     "start_time": "2024-01-28T18:57:35.791285Z"
+     "end_time": "2024-01-28T19:03:26.909826Z",
+     "start_time": "2024-01-28T19:03:26.889644Z"
     }
    },
-   "execution_count": 238,
+   "execution_count": 258,
    "outputs": [
     {
      "name": "stdout",
@@ -832,7 +832,7 @@
     "id": "6bcsDSoRXHZe"
    },
    "source": [
-    "As seen in the results, many of the approximations differ a little bit from what they are trying to approximate which is expected. In many testcases, the different residual values are in the size order of around $10^{-14}$ to $10^{-16}$ which is very close to 0. A probable reason for these differences is probable due to round of errors in the floating point representation of the values used in the different algorithms. However, these differences are so small that they could be considered negligible in some applications. "
+    "As seen in the results, many of the approximations differ a little bit from what they are trying to approximate which is expected. In many testcases, the different residual values are in the size order of around $10^{-14}$ to $10^{-16}$ which is very close to 0. A probable reason for these differences could be due to round of errors in the floating point representation of the values used in the different algorithms. However, these differences are so small that they could be considered negligible for some applications. "
    ]
   }
  ]
