Some more small changes

--- a/Lab1/lovisastrange_lab1.ipynb
+++ b/Lab1/lovisastrange_lab1.ipynb
@@ -166,9 +166,9 @@
         "id": "l5zMzgPlRAF6"
       },
       "source": [
-        "When doing computations with large matrices, the time complexity of the computations are important. One area in which this can be considered is when working with sparse matrices, ie matrices that largely consist of zeros. Often, computations with such matrices can become faster if we consider the large amount of 0:s in them.\n",
+        "When doing computations with large matrices, the time complexity of the computations are important. One area in which this can be considered is when working with sparse matrices, ie matrices that largely consist of zeros. Often, computations with such matrices can become faster if we consider the large amount of 0:s in them before doing the computations.\n",
         "\n",
-        "Another way to compute things more efficiently is by factorizing maricies into a form that is easier to invert. When solving a matrix equation $$Ax = b$$, it is expensive to directly invert the matrix A. However, if we can write it as $$A = BC,$$ where $B$ and $C$ is easier to invert, we can solve the equation more efficiently.\n",
+        "Another way to compute things more efficiently is by factorizing matricies into a form that is easier to invert. When solving a matrix equation $$Ax = b,$$ it is expensive to directly invert the matrix A. However, if we can write it as $$A = BC,$$ where $B$ and $C$ is easier to invert, we can solve the equation more efficiently.\n",
         "\n",
         "In this report, an algorithm for multiplicating a sparse matrix and a vector will be presented. Also, a way to factorize matrices will be presented, as well as using the factorization to solve a matrix equation."
       ]
@@ -191,7 +191,7 @@
         "##Sparse matrix-vector product\n",
         "For matrices that are sparse it is often not efficient to use regular matrix-vector multiplication. Instead, we can use another algoritm that uses a specific data structure to make the computation more efficient.\n",
         "\n",
-        "This data structure is called *compressed row structure* (lecture X, slide Y) or CRS. A matrix is represented as 3 arrays. The first one conatins all non-zero elements of the matrix: The seccond one (of the same length) has the column index for each of the non-zero elements. Lastly, the third array contains the index that points to the position in the first array where each new row starts.\n",
+        "This data structure is called *compressed row storage* (lecture 1, slide 82) or CRS. A matrix is represented as 3 arrays. The first one conatins all non-zero elements of the matrix: The seccond one (of the same length) has the column index for each of the non-zero elements. Lastly, the third array contains the index that points to the position in the first array where each new row starts.\n",
         "\n",
         "We look at an example using the matrix\n",
         "$$A= \\begin{bmatrix}3&0&0\\\\0&2&0 \\end{bmatrix}.$$\n",
@@ -219,12 +219,12 @@
         "    row_ptr = []\n",
         "\n",
         "    for row in A:\n",
-        "      colCounter = 0\n",
-        "      row_ptr.append(len(val))\n",
+        "      colCounter = 0 #keeps track of column\n",
+        "      row_ptr.append(len(val)) # inserts row pointers for each row\n",
         "\n",
         "      for elem in row:\n",
         "        if elem != 0:\n",
-        "          val.append(elem)\n",
+        "          val.append(elem) # keeps track of non-zero elements\n",
         "          col_idx.append(colCounter)\n",
         "        colCounter +=1\n",
         "    row_ptr.append(len(val))\n",
@@ -243,7 +243,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Then, we can use this data structure to compute the product between a sparse matrix and a vector more efficiently. (Lecture X, slide Y) To understand how this works, we will lok at an example.\n",
+        "Then, we can use this data structure to compute the product between a sparse matrix and a vector more efficiently. (Lecture 1, slide 84) To understand how this works, we will lok at an example.\n",
         "\n",
         "Using the regular matrix-vector product, we would do the following computations\n",
         "$$c =A\\cdot b = \\begin{bmatrix}3&0&0\\\\0&2&0 \\end{bmatrix} \\begin{bmatrix}1\\\\2\\\\3 \\end{bmatrix}= \\begin{bmatrix}3⋅1+0\\cdot2+0⋅3\\\\0⋅1+2⋅2+0⋅3 \\end{bmatrix} = \\begin{bmatrix}3\\\\4 \\end{bmatrix}$$\n",
@@ -270,7 +270,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Sparse matrix vector multiplucation\n",
+        "# Sparse matrix vector multiplucation, based on algorithm from Lecture 1, slide 84\n",
         "\n",
         "## Input: vector x with length n, CRS representation of mxn matrix A\n",
         "## Output: b = Ax\n",
@@ -299,14 +299,14 @@
         "One way in which we can factorize matrices is by QR-factorization, $$\n",
         "A = QR,\n",
         "$$\n",
-        "where Q is an orthogonal matrix and R is an upper triangular matrix. This can be done by so called Gram-Schmidt QR factorization. (Reference! kap 5.3)\n",
+        "where Q is an orthogonal matrix and R is an upper triangular matrix. This can be done by so called Gram-Schmidt QR factorization. (Lecture 1, slide 57)\n",
         "\n",
         "We want to construct an orthogonal basis for the matrix A using Gram Schmits method, which is done by going through all the vectors $a_{:j}$ that span $A,$ and suptracting the projection of $a_{:j}$ on all vectors alredy in the orthogonal base from $a_{:j}.$ This is done by computing $$\n",
         "v_j = a_j - ∑_{i=1}^{j-1}(a_{:j}q_i)q_i\n",
         "$$\n",
-        "and normalising the result. Writing this as a linear system with a matric R having elements $r_{ij} = (a_{:j}q_i)$ and $r_{ii}=||v_j||, $ we get an upper triangular matrix R, and together with the (orthogonal) columns of Q, this is a QR-factorization of A.\n",
+        "and normalising the result. Writing this as a linear system with a matric R having elements $r_{ij} = (a_{:j}q_i)$ and $r_{ii}=||v_j||, $ we get an upper triangular matrix R, and together with the matrix $Q$ with the (orthogonal) vectors as columns, this is a QR-factorization of A.\n",
         "\n",
-        "However, when doing this nummerically, instead want to use an equivalent form of Gram-Schmidts method, where we construct a projector $P_j$ as $$\n",
+        "However, when doing this nummerically, instead want to use an equivalent form of Gram-Schmidts method, where we instead construct a projector $P_j$ as $$\n",
         "P_J = P^{\\perp q_{:j-1}}...P^{\\perp q_{:1}}\n",
         "$$ where $$\n",
         "P^{\\perp q_{:i}} = I - q_{:i}q_{:i}^T.\n",
@@ -336,8 +336,8 @@
         "    for i in range(j):\n",
         "      R[i,j] = np.dot(Q[:,i],v[:])\n",
         "      v[:] = v[:] - R[i,j]*Q[:,i]\n",
-        "    R[j,j] = np.sqrt(sum([elem**2 for elem in v]))\n",
-        "    Q[:,j] = v[:]/R[j,j]\n",
+        "    R[j,j] = np.sqrt(sum([elem**2 for elem in v])) #create diagonal elements in R\n",
+        "    Q[:,j] = v[:]/R[j,j] # create columns of Q\n",
         "\n",
         "  return Q,R"
       ],
@@ -363,7 +363,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Backward substitution\n",
+        "# Backward substitution (based on algorithm from Lecture 1, slide 55)\n",
         "\n",
         "## Input: Upper triangular matrix U, vector b\n",
         "## Output: solution to Ux = b\n",
