Started working on assignments

--- a/Lab2/Widen00_lab2.ipynb
+++ b/Lab2/Widen00_lab2.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3zkgllwjzXTo+NcmnXtnZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +26,290 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "1M-lTFLFhfo-"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "#File"
+        "# **Lab 2: Iterative Methods**\n",
+        "**Joel Widén**"
+      ],
+      "metadata": {
+        "id": "ZaEBrl-az9b3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Abstract**"
+      ],
+      "metadata": {
+        "id": "tGDtAfRV0OWa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Short summary of the lab report. State the objectives, methods used, main results and conlusions."
+      ],
+      "metadata": {
+        "id": "4Bh37nkE0YG2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**About the code**\n"
+      ],
+      "metadata": {
+        "id": "mpJPf-Vw0Z6F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is a report in the course DD2363 Methods in Scientific Computing. The author of this file is Joel Widén, joelwid@kth.se."
+      ],
+      "metadata": {
+        "id": "l55QIaTP2MFo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Set up environment**"
+      ],
+      "metadata": {
+        "id": "A3hd-IdH1enM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This block is run to set up the environment."
+      ],
+      "metadata": {
+        "id": "pI_pxuad1keF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load neccessary modules.\n",
+        "from google.colab import files\n",
+        "\n",
+        "import time\n",
+        "import numpy as np\n",
+        "\n",
+        "#try:\n",
+        "#    from dolfin import *; from mshr import *\n",
+        "#except ImportError as e:\n",
+        "#    !apt-get install -y -qq software-properties-common\n",
+        "#    !add-apt-repository -y ppa:fenics-packages/fenics\n",
+        "#    !apt-get update -qq\n",
+        "#    !apt install -y --no-install-recommends fenics\n",
+        "#    from dolfin import *; from mshr import *\n",
+        "\n",
+        "#import dolfin.common.plotting as fenicsplot\n",
+        "\n",
+        "from matplotlib import pyplot as plt\n",
+        "from matplotlib import tri\n",
+        "from matplotlib import axes\n",
+        "from mpl_toolkits.mplot3d import Axes3D"
+      ],
+      "metadata": {
+        "id": "1-wwwqjt1lNT"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Introduction**"
+      ],
+      "metadata": {
+        "id": "J35UZGP81vOW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Numbered algorithms, equations and chapter references used in this report is from the DD2363 course book Methods in Computational Science by Johan Hoffman if not stated otherwise.\n",
+        "\n",
+        "**Assignment 1:** Function: Jacobi iteration for Ax=b\n",
+        "\n",
+        "* *Input:* matrix $A$, vector $b$\n",
+        "* *Output:* vector $x$\n",
+        "* *Test:* convergence of residual $|| Ax-b ||$, $|| x-y ||$ for manufactured/exact solution $y$\n",
+        "\n",
+        "**Assignment 2:** Function: Gauss-Seidel iteration for $Ax=b$\n",
+        "\n",
+        "* *Input:* matrix $A$, vector $b$\n",
+        "* *Output:* vector $x$\n",
+        "* *Test:* convergence of residual $|| Ax-b ||$, $|| x-y ||$ for manufactured/exact solution $y$\n",
+        "\n",
+        "**Assignment 3:** Function: Newton's method for scalar nonlinear equation $f(x)=0$\n",
+        "\n",
+        "* *Input:* scalar function $f(x)$\n",
+        "* *Output:* real number $x$\n",
+        "* *Test:* convergence of residual $|f(x)|$, $|x-y|$ for manufactured/exact solution $y$"
+      ],
+      "metadata": {
+        "id": "JBNIypdp1wk4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Method**"
+      ],
+      "metadata": {
+        "id": "Nmy8HNIJ1ySM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Methods and code here"
+      ],
+      "metadata": {
+        "id": "Rp0GGvqO151y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assignment 1\n",
+        "# Jacobi iteration for Ax = b\n",
+        "# Jacobi iteration is based on splitting the A = A_1 + A_2 where\n",
+        "# A_1 = D = diag(A) and A_2 = A - D\n",
+        "\n",
+        "def jacobi_iteration(A, b):\n",
+        "  m, n = np.shape(A)\n",
+        "  D = np.diagonal(A)\n",
+        "  print(\"Diagonal = \", D)\n",
+        "  x = np.zeros(n)\n",
+        "  k = 5\n",
+        "  x_matrix = np.zeros((k, len(x)))\n",
+        "  r_vec = np.zeros(k)\n",
+        "  print(m, n)\n",
+        "  print(x_matrix)\n",
+        "  print(r_vec)\n",
+        "  for iter in range(k):\n",
+        "    for i in range(0, n):\n",
+        "      sum = 0\n",
+        "      for j in range(0, n):\n",
+        "        if j == i:\n",
+        "          sum = sum\n",
+        "        else:\n",
+        "          sum = sum + A[i][j]*x[j]\n",
+        "      x[i] = 1/A[i][i] * (b[i] - sum)\n",
+        "    x_matrix[iter,:] = x\n",
+        "    print(x)\n",
+        "    r = np.linalg.norm(A.dot(x)-b)\n",
+        "    print(r)\n",
+        "    r_vec[iter] = r\n",
+        "\n",
+        "  return(x_matrix, r_vec)\n",
+        "\n",
+        "\n",
+        "\n",
+        "n = 4\n",
+        "m = 4\n",
+        "A = np.random.randint(10, size=(m, n))\n",
+        "y = np.random.randint(10, size=n)\n",
+        "b = A.dot(y)\n",
+        "conv_criterion = np.eye(n) -\n",
+        "print(\"Input matrix = \", A)\n",
+        "print(\"Manufactured solution y = \", y)\n",
+        "print(\"b = \", b)\n",
+        "print(A[1][2])\n",
+        "x, r = jacobi_iteration(A, b)\n",
+        "print(\"Result matrix x = \", x)\n",
+        "print(\"Result residuals r = \", r)"
+      ],
+      "metadata": {
+        "id": "T18t_NIq30pm",
+        "outputId": "f3d500b6-70f9-4225-c76c-78e2a5bb1b7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input matrix =  [[5 2 1 0]\n",
+            " [2 3 6 1]\n",
+            " [6 7 4 8]\n",
+            " [8 3 3 7]]\n",
+            "Manufactured solution y =  [3 1 9 9]\n",
+            "b =  [ 26  72 133 117]\n",
+            "6\n",
+            "Diagonal =  [5 3 4 7]\n",
+            "4 4\n",
+            "[[0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0.]]\n",
+            "[0. 0. 0. 0. 0.]\n",
+            "[  5.2         20.53333333 -10.48333333   6.46428571]\n",
+            "82.4299549414855\n",
+            "[ -0.91666667  43.42301587 -54.29384921  22.42083333]\n",
+            "277.9601589925545\n",
+            "[  -1.31043651  125.98771164 -230.10450728   62.83341128]\n",
+            "1064.7764862645126\n",
+            "[ 8.25816799e-01  4.62714000e+02 -9.03405047e+02  2.04638087e+02]\n",
+            "4059.721794100746\n",
+            "[ 7.95409573e-01  1.76206713e+03 -3.46083676e+03  7.43849374e+02]\n",
+            "15421.052953617289\n",
+            "Result matrix x =  [[ 5.20000000e+00  2.05333333e+01 -1.04833333e+01  6.46428571e+00]\n",
+            " [-9.16666667e-01  4.34230159e+01 -5.42938492e+01  2.24208333e+01]\n",
+            " [-1.31043651e+00  1.25987712e+02 -2.30104507e+02  6.28334113e+01]\n",
+            " [ 8.25816799e-01  4.62714000e+02 -9.03405047e+02  2.04638087e+02]\n",
+            " [ 7.95409573e-01  1.76206713e+03 -3.46083676e+03  7.43849374e+02]]\n",
+            "Result residuals r =  [   82.42995494   277.96015899  1064.77648626  4059.7217941\n",
+            " 15421.05295362]\n"
+          ]
+        }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Results**"
+      ],
+      "metadata": {
+        "id": "nKaQfj-a2Aaj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Results here"
+      ],
+      "metadata": {
+        "id": "kR-lguVL2BOG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Discussion**"
+      ],
+      "metadata": {
+        "id": "LYE-NAtd2CuB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Discussion here"
+      ],
+      "metadata": {
+        "id": "D3zwhxBJ2JFj"
+      }
     }
   ]
 }
